<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_cultivo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_cultivo" />

    <TextView
        android:id="@+id/tv_cultivo_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_del_cultivo"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/iv_cultivo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_fecha_cosecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_cosecha"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@+id/tv_cultivo_nombre"
        app:layout_constraintTop_toBottomOf="@+id/tv_cultivo_nombre"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
