<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/degraded_background">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/buttonColor"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/title"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_cultivos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:entries="@array/tipos_cultivos"
        android:background="@drawable/spinner_background"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <Button
        android:id="@+id/btn_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_fecha_de_cultivo"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintTop_toBottomOf="@+id/spinner_cultivos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_view_cultivos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_cultivos"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
